index.css, index.html, main.js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         background-color: #ffee58;
       "
     >
-      <nav class="navbar navbar-expand-lg navbar-light ms-5 me-5">
+      <nav class="navbar navbar-expand-lg navbar-light ms-5 me-5" id="nav">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">Wildwood</a>
           <button
@@ -200,7 +200,6 @@
       <div class="container">
         <h2 class="text-center">Trees</h2>
         <div class="row">
-          <!-- Tree Cards -->
           <div class="col-md-4 mb-4 animate-card animate-on-view">
             <div class="card">
               <img src="tree1.jpg" class="card-img-top" alt="Tree 1" />
@@ -211,7 +210,6 @@
             </div>
           </div>
 
-          <!-- Repeat for other cards -->
           <div class="col-md-4 mb-4 animate-card animate-on-view">
             <div class="card">
               <img src="tree1.jpg" class="card-img-top" alt="Tree 2" />
@@ -270,7 +268,6 @@
       <div class="container">
         <h2 class="text-center">Seeds</h2>
         <div class="row">
-          <!-- Seed Cards -->
           <div class="col-md-4 mb-4 animate-card animate-on-view">
             <div class="card">
               <img src="seed1.jpg" class="card-img-top" alt="Seed 1" />
@@ -282,8 +279,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Repeat for other cards -->
           <div class="col-md-4 mb-4 animate-card animate-on-view">
             <div class="card">
               <img src="seed1.jpg" class="card-img-top" alt="Seed 2" />
@@ -424,7 +419,7 @@
     </div>
 
     <!-- FAQ Section -->
-    <section id="faq" class="py-5">
+    <section id="faq" class="py-5 animate-faq">
       <div class="container">
         <h2 class="text-center">FAQ</h2>
         <div class="accordion" id="faqAccordion">
@@ -453,7 +448,6 @@
               </div>
             </div>
           </div>
-          <!-- Add more FAQ items as needed -->
         </div>
       </div>
     </section>
